# paryfor

./: CMakeLists.txt  LICENSE  README.md  paryfor.hpp  test.cpp
